<resources>
    <string name="app_name">FlightsWidgetApp</string>
    <string name="back_arrow">back arrow</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="menu">menu</string>
    <string name="airplane">airplane</string>
    <string name="calendar">calendar</string>
    <string name="bag">bag</string>
    <string name="tickets">Tickets</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="ticket_number_real">012344382892929</string>
    <string name="qr_icon">qr_icon</string>
    <string name="many_dots">....................................</string>
    <string name="date">Sat, 22 January</string>
    <string name="time_flight">7h 50m</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="flight_black_icon">flight_black_icon</string>
    <string name="london">London</string>
    <string name="new_york">New York</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>
    <string name="gate">Gate</string>
    <string name="seat">Seat</string>
    <string name="flight">Flight</string>
    <string name="c2">C2</string>
    <string name="tds9022y">TDS9022Y</string>
    <string name="_26">26</string>
    <string name="departure">Departure</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="_15_35">15:35</string>
    <string name="_23_25">23:25</string>
    <string name="pay_for_your_ticket">Pay for\nyour ticket</string>
    <string name="_1200">$1200</string>
    <string name="trash_icon">trash_icon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="departure_8_45_am">DEPARTURE: 8:45 AM</string>
    <string name="arrival_12_45_pm">ARRIVAL: 12:45 PM</string>
    <string name="dxb">DXB</string>
    <string name="sfo">SFO</string>
    <string name="many_dash">----</string>
    <string name="dubai">Dubai</string>
    <string name="san_francisco">San Francisco</string>
    <string name="_16_h_direct">16 h | Direct</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_8_45_am">8:45 AM</string>
    <string name="t2">T2</string>
    <string name="tracking_flights">Tracking flights</string>
    <string name="departure_widget">Departure: %1$s</string>
    <string name="directo_widget">%1$s | Directo</string>
    <string name="arrival_widget">Arrival: %1$s</string>
    <string name="empty" />
    <string name="dark_theme">Dark theme</string>
    <string name="widget_configuration">Flights widget configuration</string>
    <string name="save_changes">Save changes</string>
    <string name="hide_date">Hide date</string>
    <string name="small_text_size">Small text size</string>
    <string name="apply_changes">Apply changes</string>
</resources>