<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.FlightsWidgetApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.FlightsWidgetApp.AppWidgetContainer"
    android:orientation="vertical"
    android:background="@drawable/widget_corner_shape_background"
    android:id="@+id/main_widget_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="12dp">

        <TextView
            android:id="@+id/departure_time_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/departure_8_45_am"
            android:textSize="12sp"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/arrival_time_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrival_12_45_pm"
            android:textSize="12sp"
            android:gravity="end"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/city_from_abbreviation_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dxb"
            android:textSize="26sp"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_black_flight"
            android:contentDescription="@string/flight"/>

        <TextView
            android:id="@+id/city_to_abbreviation_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sfo"
            android:textSize="26sp"
            android:gravity="end"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp">

        <TextView
            android:id="@+id/city_from_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dubai"
            android:textSize="12sp"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

        <TextView

            android:id="@+id/city_to_widget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/san_francisco"
            android:textSize="12sp"
            android:gravity="end"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/widget_corner_shape_background"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/travel_time_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:text="@string/_16_h_direct"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"/>


        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tomorrow"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/departure_time_footer_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_8_45_am"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/city_from_abbreviation_footer_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dxb"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/seat_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/t2"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>